# vim:set noet ts=4
#
# ibus-sdim - The Tables engine for IBus
#
# Copyright (c) 2008-2009 Yu Yuwei <acevery@gmail.com>
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
#

SUBDIRS = \
	additional \
	$(NULL)

icons_DATA = \
	ibus-sdim.svg \
	full-letter.svg \
	half-letter.svg \
	full-punct.svg \
	half-punct.svg \
	tab-mode.svg \
	py-mode.svg \
	onechar.svg \
	phrase.svg \
	chinese.svg \
	english.svg \
	acommit.svg \
	ncommit.svg \
	cb-mode.svg \
	sc-mode.svg \
	tc-mode.svg \
	scb-mode.svg \
	tcb-mode.svg \
	$(NULL)

iconsdir = $(pkgdatadir)/icons

EXTRA_DIST = \
	$(icons_DATA) \
	$(NULL)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)

